After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 775172 - Review functions fails silently when offline
Review functions fails silently when offline
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
3.22.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-11-27 14:52 UTC by Andreas Nilsson
Modified: 2016-12-01 10:23 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Andreas Nilsson 2016-11-27 14:52:45 UTC
I disconnected from my wifi connection, and then I tried to write a review.
When I posted the review, I realized that maybe it didn't get sent, due to me being offline. Or did it?
Comment 1 Andreas Nilsson 2016-11-30 10:23:34 UTC
If we make the button insensitive, we can make the tooltip be:
"You need to be connected to write reviews"
Comment 2 Richard Hughes 2016-12-01 10:23:28 UTC
commit 6c2ee1ae9fab0f9e8be6174245e1eb11e153b682
Author: Richard Hughes <richard@hughsie.com>
Date:   Thu Dec 1 09:55:16 2016 +0000

    Do not hide review buttons when offline
    
    Hiding and showing the buttons makes the UI reflow when the network goes up
    or down.
    
    Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=775172