Do not hide review buttons when offline

Hiding and showing the buttons makes the UI reflow when the network goes up
or down.

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=775172